[package]
name = "virto-common"
version = "0.1.0"
edition = "2021"

[dependencies]
bs58 = { version = "0.5.0", default-features = false }
wasm-bindgen = { version = "0.2.87", optional = true }

frame-support = { workspace = true, optional = true }
parity-scale-codec = { workspace = true, optional = true }
scale-info = { workspace = true, optional = true }

[dev-dependencies]
frame-support = { workspace = true, features = ["std"] }

[features]
default = ["runtime"]
alloc = []
js = ["alloc", "wasm-bindgen"]
nightly = []
runtime = ["dep:frame-support", "dep:parity-scale-codec", "dep:scale-info"]
