[dependencies]
arrayvec = { default-features = false, version = '0.5' }
num-traits = { default-features = false, version = '0.2' }
parity-scale-codec = { default-features = false, features = ['derive'], version = '1.0' }
serde = { default-features = false, features = ['derive'], optional = true, version = '1.0' }
sp-core = { default-features = false, version = '2.0' }

[features]
default = []
std = [
    'arrayvec/std',
    'num-traits/std',
    'parity-scale-codec/std',
    'serde',
    'sp-core/std',
]

[package]
authors = ['The VLN team']
categories = ['configuration']
description = 'Valiu Liquidity Network - Commons'
edition = '2018'
keywords = ['blockchain', 'valiu']
license = 'Unlicense'
name = 'vln-commons'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'

