[dependencies]
arrayvec = { default-features = false, version = "0.5.2" }
frame-support = { default-features = false, version = "3.0.0" }
num-traits = { default-features = false, version = "0.2.14" }
parity-scale-codec = { default-features = false, features = ['derive'], version = "2.0.0" }
serde = { default-features = false, features = ['derive'], optional = true, version = "1.0.123" }
sp-core = { default-features = false, version = "3.0.0" }

[features]
default = []
std = [
    'arrayvec/std',
    'num-traits/std',
    'frame-support/std',
    'parity-scale-codec/std',
    'serde',
    'sp-core/std',
]

[package]
authors = ['The VLN team']
categories = ['configuration']
description = 'Valiu Liquidity Network - Commons'
edition = '2018'
keywords = ['blockchain', 'valiu']
license = 'Unlicense'
name = 'vln-commons'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'

