[package]
	name = "virto-node"
	version = "0.12.1"
	license = "GPL-3.0-only"
	authors.workspace = true
	homepage.workspace = true
	repository.workspace = true
	edition.workspace = true

[[bin]]
	name = "virto-node"
	path = "src/main.rs"

[dependencies]
	clap = { workspace = true }
	futures = { workspace = true }
	hex-literal = { workspace = true }
	jsonrpsee = { workspace = true, features = ["server"] }
	log = { workspace = true, default-features = true }
	parity-scale-codec = { workspace = true }
	serde = { features = ["derive"], workspace = true, default-features = true }
	serde_json = { workspace = true, default-features = true }

	# Local
	kreivo-runtime = { workspace = true, optional = true }
	pallet-asset-tx-payment = { workspace = true, optional = true }
	frame-system = { workspace = true, optional = true }

	# Substrate
	frame-benchmarking = { workspace = true }
	frame-benchmarking-cli = { workspace = true }
	pallet-transaction-payment-rpc = { workspace = true }
	sc-basic-authorship = { workspace = true }
	sc-chain-spec = { workspace = true }
	sc-cli = { workspace = true }
	sc-client-api = { workspace = true }
	sc-offchain = { workspace = true }
	sc-consensus = { workspace = true }
	sc-executor = { workspace = true }
	sc-network = { workspace = true }
	sc-network-sync = { workspace = true }
	sc-rpc = { workspace = true }
	sc-service = { workspace = true }
	sc-sysinfo = { workspace = true }
	sc-telemetry = { workspace = true }
	sc-tracing = { workspace = true }
	sc-transaction-pool = { workspace = true }
	sc-transaction-pool-api = { workspace = true }
	sp-api = { workspace = true }
	sp-block-builder = { workspace = true }
	sp-blockchain = { workspace = true }
	sp-consensus-aura = { workspace = true }
	sp-core = { workspace = true }
	sp-keystore = { workspace = true }
	sp-keyring = { workspace = true }
	sp-io = { workspace = true }
	sp-inherents = { workspace = true }
	sp-offchain = { workspace = true }
	sp-runtime = { workspace = true }
	sp-session = { workspace = true }
	sp-transaction-pool = { workspace = true }
	sp-timestamp = { workspace = true }
	substrate-frame-rpc-system = { workspace = true }
	substrate-prometheus-endpoint = { workspace = true }

	# Polkadot
	polkadot-cli = { workspace = true }
	polkadot-primitives = { workspace = true }
	xcm = { workspace = true }

	# Cumulus
	cumulus-client-cli = { workspace = true }
	cumulus-client-collator = { workspace = true }
	cumulus-client-consensus-aura = { workspace = true }
	cumulus-client-consensus-common = { workspace = true }
	cumulus-client-consensus-proposer = { workspace = true }
	cumulus-client-consensus-relay-chain = { workspace = true }
	cumulus-client-service = { workspace = true }
	cumulus-client-network = { workspace = true }
	cumulus-primitives-core = { workspace = true }
	cumulus-client-parachain-inherent = { workspace = true }
	cumulus-primitives-parachain-inherent = { workspace = true }
	cumulus-relay-chain-interface = { workspace = true }

	parachains-common = { workspace = true }

[build-dependencies]
	substrate-build-script-utils = { workspace = true }

[dev-dependencies]
	assert_cmd = { workspace = true }
	nix = { workspace = true }
	tempfile = "3.3.0"
	tokio = { workspace = true }
	wait-timeout = { workspace = true }

[features]
	default = ["kreivo-runtime"]
	kreivo-runtime = [
		"dep:frame-system",
		"dep:kreivo-runtime",
		"dep:pallet-asset-tx-payment",
	]
	runtime-benchmarks = [
		"cumulus-primitives-core/runtime-benchmarks",
		"frame-benchmarking-cli/runtime-benchmarks",
		"frame-benchmarking/runtime-benchmarks",
		"kreivo-runtime?/runtime-benchmarks",
		"parachains-common/runtime-benchmarks",
		"polkadot-cli/runtime-benchmarks",
		"polkadot-primitives/runtime-benchmarks",
		"sc-service/runtime-benchmarks",
		"sp-runtime/runtime-benchmarks",
	]
	try-runtime = [
		"kreivo-runtime?/try-runtime",
		"polkadot-cli/try-runtime",
		"sp-runtime/try-runtime",
	]
