[package]
authors = ['The VLN team']
categories = ['configuration']
description = 'Valiu Liquidity Network - Primitives'
edition = '2018'
keywords = ['blockchain', 'valiu']
license = 'Unlicense'
name = 'vln-primitives'
readme = 'README.md'
repository = 'https://github.com/valibre-org/node'
version = '0.1.0'

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = "2.0.0" }
serde = { default-features = false, features = ['derive'], optional = true, version = "1.0.123" }
sp-arithmetic = { default-features = false, version = "3.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
sp-runtime= { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "rococo-v1", default-features = false, version = '3.0.0' }
scale-info = { git = "https://github.com/paritytech/scale-info", default-features = false, features = ["derive", "serde"] }

[features]
default = []
std = [
    'sp-arithmetic/std',
    'parity-scale-codec/std',
    'serde',
    'sp-std/std',
    'sp-runtime/std',
    'scale-info/std',
    'frame-support/std'
]
