[package]
authors = ['The VLN team']
categories = ['configuration']
description = 'Valiu Liquidity Network - Primitives'
edition = '2018'
keywords = ['blockchain', 'substrate']
license = 'Unlicense'
name = 'vln-primitives'
readme = 'README.md'
repository = 'https://github.com/valibre-org/vln-node'
version = '0.2.0'

[dependencies]
parity-scale-codec = { default-features = false, features = ['derive'], version = "2.0.0" }
serde = { default-features = false, features = ['derive'], optional = true, version = "1.0.123" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
sp-runtime= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
scale-info = { git = "https://github.com/paritytech/scale-info", default-features = false, features = ["derive", "serde"] }

[features]
default = []
std = [
    'sp-arithmetic/std',
    'parity-scale-codec/std',
    'serde',
    'sp-std/std',
    'sp-runtime/std',
    'scale-info/std',
]
