[package]
authors = ['The Virto team']
categories = ['configuration']
description = 'Virto Network - Primitives'
edition = '2021'
keywords = ['blockchain', 'substrate']
license = 'Unlicense'
name = 'virto-primitives'
readme = 'README.md'
repository = 'https://github.com/virto-network/virto-node'
version = '0.3.0'

[dependencies]
parity-scale-codec = { default-features = false, features = ['max-encoded-len'], version = "3.0.0" }
serde = { default-features = false, features = ['derive'], optional = true, version = "1.0.123" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
sp-runtime= { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.27", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }

[features]
default = []
std = [
    'sp-arithmetic/std',
    'parity-scale-codec/std',
    'serde',
    'sp-std/std',
    'sp-runtime/std',
    'scale-info/std',
]
